fix css clipped descenders

--- a/src/index.css
+++ b/src/index.css
@@ -55,11 +55,11 @@ p, span, h3 {
     flex: 0 0 auto;
     display: flex;
     flex-direction: column;
+    gap: 8px;
 }
 
 .card--image {
     position: relative;
-    margin-bottom: 9px;
 }
 
 .card--image span {
@@ -82,7 +82,6 @@ p, span, h3 {
     display: flex;
     align-items: center;
     gap: 2px;
-    margin-bottom: 8px;
 }
 
 .card--rating img {
@@ -100,9 +99,11 @@ p, span, h3 {
 h3 {
     font-weight: 300;
     font-size: 12px;
-    margin: 0px 0px 8px 0px;
+    padding-bottom: 3px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
+    margin: 0px;
 }
 
 .card > p {
